--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                 <div class="col-lg-12 video-parallax">
                     <div class="overlay"></div>
                     <video id="bgvideo" preload="auto" autoplay loop muted="muted">
-                        <source src="video/wedding.webm" type="video/webm">
-                        <source src="video/wedding.mp4" type="video/mp4">
-                        <source src="video/wedding.ogg" type="video/ogg">
+                        <source src="video/makingoff.mp4" type="video/webm">
+                        <source src="video/makingoff.mp4" type="video/mp4">
+                        <source src="video/makingoff.ogg" type="video/ogg">
                         Your browser does not support the video element.
                     </video>
                     <div class="col-md-12 playvid">
                         <a class="fa fa-play-circle popup-vimeo wow zoomInDown" data-wow-duration="1s"
-                            data-wow-delay="0.9s" href="http://vimeo.com/54428266"></a>
+                            data-wow-delay="0.9s" href="video/makingoff.mp4"></a>
                     </div>
                 </div>
             </div>
