--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
                 </div>
             </div>
             <div class="item active">
-                <div class="carousel-img"
-                    style="background-image:url(https://media.giphy.com/media/l36kU80xPf0ojG0Erg/giphy.gif)"></div>
+                <div class="carousel-img" style="background-image:url(img/capa1.jpg)"></div>
             </div>
             <div class="item">
-                <div class="carousel-img" style="background-image:url(images/carousel-2.jpg)"></div>
+                <div class="carousel-img" style="background-image:url(img/capa2.gif)"></div>
             </div>
             <div class="item">
                 <div class="carousel-img" style="background-image:url(images/carousel-3.jpg)"></div>
