--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 
 
-            <!--Special Events-->
+            <!--Lista-->
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -356,7 +356,7 @@
 
                         </div>
                         <center>
-                            <a href="https://goo.gl/maps/U1v9rKZU76t" target="_blank">
+                            <a href="#" target="">
                                 <div class="event alternative wow flipInX" data-wow-delay="0.5s">
                                     <i class="fas fa-gifts"></i>
                                     <i class="fas fa-gift"></i>
