--- a/index.html
+++ b/index.html
@@ -77,21 +77,6 @@
             <div class="item">
                 <div class="carousel-img" style="background-image:url(img/capa3.jpg)"></div>
             </div>
-            <!-- <div class="item">
-                <div class="carousel-img" style="background-image:url(img/capa4.jpg)"></div>
-            </div>
-            <div class="item">
-                <div class="carousel-img" style="background-image:url(img/capa5.jpg)"></div>
-            </div>
-            <div class="item">
-                <div class="carousel-img" style="background-image:url(img/capa6.jpg)"></div>
-            </div>
-            <div class="item">
-                <div class="carousel-img" style="background-image:url(img/capa7.jpg)"></div>
-            </div>
-            <div class="item">
-                <div class="carousel-img" style="background-image:url(img/capa8.jpg)"></div>
-            </div> -->
         </div>
         <div class="overlay2"></div>
         <div id="geo" class="geo">
@@ -177,9 +162,10 @@
                     <div class="col-md-12">
                         <div class="heading">
                             <h2 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">Nossos Momentos</h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.7s">Contrary to popular belief, Lorem Ipsum is not
-                                simply random text. It has roots in a piece of classical Latin literature from 45 BC,
-                                making it over 2000 years old.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.7s">
+                                Aqui estão algumas fotos nossas.
+                                <br>Arrasta pro lado ->
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -193,26 +179,18 @@
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto1.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto1.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/1.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/1.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto2.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto2.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/2.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/2.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
@@ -222,26 +200,18 @@
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto3.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto3.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/3.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/3.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto4.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto4.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/4.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/4.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
@@ -251,26 +221,18 @@
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto5.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto5.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/5.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/5.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto6.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto6.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/6.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/6.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
@@ -280,60 +242,22 @@
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto1.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto1.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/7.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/7.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
                         <ul class="grid cs-style-3">
                             <li>
                                 <figure>
-                                    <img src="img/foto2.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto2.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
+                                    <img src="img/8.jpeg" class="img-responsive" alt="portfolio">
+                                    <a href="img/8.jpeg" class="popup-image" data-effect="mfp-zoom-in"><span
                                             class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
                                 </figure>
                             </li>
                         </ul>
                     </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-3 owl-item">
-                        <ul class="grid cs-style-3">
-                            <li>
-                                <figure>
-                                    <img src="img/foto3.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto3.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
-                                            class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
-                                </figure>
-                            </li>
-                        </ul>
-                        <ul class="grid cs-style-3">
-                            <li>
-                                <figure>
-                                    <img src="img/foto4.jpg" class="img-responsive" alt="portfolio">
-                                    <a href="img/foto4.jpg" class="popup-image" data-effect="mfp-zoom-in"><span
-                                            class="fa fa-photo fa-2x"></span></a>
-                                    <figcaption>
-                                        <h4>Portfolio</h4>
-                                        <span>by Jacob Cummings</span>
-                                    </figcaption>
-                                </figure>
-                            </li>
-                        </ul>
-                    </div>
-
 
                 </div>
             </div>
@@ -356,7 +280,7 @@
 
                         </div>
                         <center>
-                            <a href="#" target="">
+                            <a href="presentes.html" target="">
                                 <div class="event alternative wow flipInX" data-wow-delay="0.5s">
                                     <i class="fas fa-gifts"></i>
                                     <i class="fas fa-gift"></i>
@@ -412,9 +336,9 @@
                 <div class="row">
                     <div class="col-md-12 footer1">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
-                            <p class="text-center"><span class="fa fa-twitter fa-5x"></span></p>
-                            <div class="footer-tweet">
-                            </div>
+                            <center>
+                                <h2>Confirme sua presença </h2>
+                            </center>
                         </div>
                     </div>
                 </div>
@@ -426,39 +350,57 @@
                 <div class="row">
                     <div class="col-md-12">
                         <!--<img src="images/logo-grey.png" alt="logo"> -->
-                        <p>© Webyzona 2014 - All Rights Reserved. Made With Love For You Only</p>
-                        <div class="social-icons">
+                        <div class="social-icons" style="font-size:36px">
+
                             <ul>
-                                <li class="">
-                                    <a href="http://www.twitter.com" target="_blank">Twitter</a>
+                                <li>
+                                    <a href="https://www.instagram.com/profguialves/" target="_blank">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
                                 </li>
-
-                                <li class="facebook">
-                                    <a href="http://www.facebook.com" target="_blank">Facebook</a>
+                                <li>
+                                    <a href="https://www.facebook.com/guilherme.alves.92351995" target="_blank">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
                                 </li>
-
-                                <li class="youtube">
-                                    <a href="http://www.youtube.com" target="_blank">YouTube</a>
+                                <li>
+                                    <a href="https://api.whatsapp.com/send?phone=5562982564280&text=&source=&data="
+                                        target="_blank">
+                                        <i class="fab fa-whatsapp"></i>
+                                    </a>
                                 </li>
-
-                                <li class="googleplus">
-                                    <a href="http://www.plus.google.com" target="_blank">Google +r</a>
+                                <li>
+                                    Guilherme
                                 </li>
-
-                                <li class="pinterest">
-                                    <a href="http://www.pinterest.com/" target="_blank">Pinterest</a>
+                            </ul>
+                            <ul>
+                                <li>
+                                    Maressa
                                 </li>
-
-                                <li class="linkedin">
-                                    <a href="http://www.linkedin.com" target="_blank">Linkedin</a>
+                                <li>
+                                    <a href="https://api.whatsapp.com/send?phone=5562982289843&text=&source=&data="
+                                        target="_blank"><i class="fab fa-whatsapp"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/maressa.cruvinel" target="_blank"><i
+                                            class="fab fa-facebook-f"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/maressacruvinel/" target="_blank"><i
+                                            class="fab fa-instagram"></i></a>
                                 </li>
                             </ul>
                         </div>
+
+                        <p><br><br><br>Made by <a href="https://www.instagram.com/gstvinf/" target="_blank">@gstvinf</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <script src="https://kit.fontawesome.com/fd1909adf6.js"></script>
 
     <!-- Al JS Plugins -->
     <script src="js/modernizr.custom.js"></script>
