correcao de bugs

--- a/presentes.html
+++ b/presentes.html
@@ -45,7 +45,7 @@
             <a href="index.html"><i class="fas fa-chevron-left"></i> Voltar</a>
             <div class="col-md-12">
                 <div class="heading">
-                    <h2 class="wow fadeInUp lista" data-wow-delay="0.5s">Nossos Momentos</h2>
+                    <h2 class="wow fadeInUp lista" data-wow-delay="0.5s">Nossa Lista</h2>
                 </div>
             </div>
         </div>
@@ -63,8 +63,8 @@
                 <table colspan="4">
                     <tr>
                         <th width="10%">Imagem</th>
-                        <th width="25%">Marca/Modelo</th>
-                        <th width="25%">Amigo</th>
+                        <th width="10%">Marca/Modelo</th>
+                        <th width="10%">Amigo</th>
                         <th width="10%">Onde encontra</th>
                     </tr>
                     <tr>
@@ -83,7 +83,7 @@
                     <tr>
                         <td><img src="http://gustavoenayara.github.io/images/list/geladeira.png"></td>
                         <td>
-                            Geladeira
+                            Fogão
                         </td>
                         <td>
                             Você?
@@ -149,8 +149,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <!--<img src="images/logo-grey.png" alt="logo"> -->
-                        <div class="social-icons" style="font-size:36px">
-
+                        <div class="social-icons" style="font-size:24px">
                             <ul>
                                 <li>
                                     <a href="https://www.instagram.com/profguialves/" target="_blank">
@@ -180,11 +179,11 @@
                                 </li>
                                 <li>
                                     <a href="https://www.facebook.com/maressa.cruvinel" target="_blank"><i
-                                            class="fab fa-facebook-f"></i></a>
+                                                class="fab fa-facebook-f"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://www.instagram.com/maressacruvinel/" target="_blank"><i
-                                            class="fab fa-instagram"></i></a>
+                                                class="fab fa-instagram"></i></a>
                                 </li>
                             </ul>
                         </div>
