--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -60,8 +59,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="messages">
-                <h1 class="slideInDown wow animated" data-wow-delay="0.5s">Gui <span
-                        class="heart pulsing fa fa-heart"></span> Mare</h1>
+                <h1 class="slideInDown wow animated" data-wow-delay="0.5s">Gui <span class="heart pulsing fa fa-heart"></span> Mare</h1>
                 <div id="time"></div>
                 <h4 class="fadeIn wow animated" data-wow-delay="1.2s">contando...</h4>
                 <div class="btn-special slideInUp wow animated page-scroll" data-wow-delay="0.7s">
@@ -95,8 +93,7 @@
                     <div class="heading">
                         <h2 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">Sejam bem-vindos!</h2>
                         <p class="wow fadeInUp" data-wow-delay="0.7s">
-                            "Para que todos vejam, e saibam, e considerem, e juntamente entendam que a mão do Senhor fez
-                            isso..."
+                            "Para que todos vejam, e saibam, e considerem, e juntamente entendam que a mão do Senhor fez isso..."
                             </br>Isaias 41:20
                         </p>
                     </div>
@@ -148,8 +145,7 @@
                         Your browser does not support the video element.
                     </video>
                     <div class="col-md-12 playvid">
-                        <a class="fa fa-play-circle popup-vimeo wow zoomInDown" data-wow-duration="1s"
-                            data-wow-delay="0.9s" href="video/makingoff.mp4"></a>
+                        <a class="fa fa-play-circle popup-vimeo wow zoomInDown" data-wow-duration="1s" data-wow-delay="0.9s" href="video/makingoff.mp4"></a>
                     </div>
                 </div>
             </div>
@@ -272,10 +268,8 @@
                             <h2 class="wow fadeInUp underline padtop50" data-wow-delay="0.5s">Lista de presentes</h2>
                             <p class="wow fadeInUp" data-wow-delay="0.7s">
                                 Sua presença é o suficiente.
-                                <br />
-                                Maaas, se você estiver tomado de uma extrema generosidade,
-                                <br />
-                                criamos algumas listinhas para sua comodidade.
+                                <br /> Maaas, se você estiver tomado de uma extrema generosidade,
+                                <br /> criamos algumas listinhas para sua comodidade.
                             </p>
 
                         </div>
@@ -302,10 +296,8 @@
                                 <strong>
                                     Alegranza Eventos
                                 </strong>
-                                <br />
-                                Av. Capyaba, Qd.96 Lt.28 - Jd. Helvécia
-                                <br />
-                                Aparecida de Goiânia - GO, 74933-260
+                                <br /> Av. Capyaba, Qd.96 Lt.28 - Jd. Helvécia
+                                <br /> Aparecida de Goiânia - GO, 74933-260
                             </p>
                         </div>
                         <center>
@@ -350,8 +342,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <!--<img src="images/logo-grey.png" alt="logo"> -->
-                        <div class="social-icons" style="font-size:36px">
-
+                        <div class="social-icons" style="font-size:24px">
                             <ul>
                                 <li>
                                     <a href="https://www.instagram.com/profguialves/" target="_blank">
@@ -364,8 +355,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://api.whatsapp.com/send?phone=5562982564280&text=&source=&data="
-                                        target="_blank">
+                                    <a href="https://api.whatsapp.com/send?phone=5562982564280&text=&source=&data=" target="_blank">
                                         <i class="fab fa-whatsapp"></i>
                                     </a>
                                 </li>
@@ -378,8 +368,7 @@
                                     Maressa
                                 </li>
                                 <li>
-                                    <a href="https://api.whatsapp.com/send?phone=5562982289843&text=&source=&data="
-                                        target="_blank"><i class="fab fa-whatsapp"></i></a>
+                                    <a href="https://api.whatsapp.com/send?phone=5562982289843&text=&source=&data=" target="_blank"><i class="fab fa-whatsapp"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://www.facebook.com/maressa.cruvinel" target="_blank"><i
