--- a/presentes.html
+++ b/presentes.html
@@ -57,84 +57,85 @@
 
     <section class="footer-lista">
         <!--Footer One-->
+        <div class="tabela-presente">
+            <table colspan="4">
+                <tr>
+                    <th width="10%">Imagem</th>
+                    <th width="10%">Marca/Modelo</th>
+                    <th width="10%">Amigo</th>
+                    <th width="10%">Onde encontra</th>
+                </tr>
+                <tr>
+                    <td><img src="list/geladeira.png"></td>
+                    <td>
+                        Geladeira
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="ganhei">
+                    <td><img src="list/geladeira.png"></td>
+                    <td>
+                        Fogão
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="ganhei">
+                    <td><img src="list/geladeira.png"></td>
+                    <td>
+                        Cama
+                    </td>
+                    <td>
+                        Gustavo e Nayara &lt;3
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="list/geladeira.png"></td>
+                    <td>
+                        Geladeira
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td><img src=""></td>
+                    <td>
+                        Modelo
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <!-- div da tabela -->
         <div class="container-fluid color pattern">
-            <div class="container tabela-presente">
-
-                <table colspan="4">
-                    <tr>
-                        <th width="10%">Imagem</th>
-                        <th width="10%">Marca/Modelo</th>
-                        <th width="10%">Amigo</th>
-                        <th width="10%">Onde encontra</th>
-                    </tr>
-                    <tr>
-                        <td><img src="http://gustavoenayara.github.io/images/list/geladeira.png"></td>
-                        <td>
-                            Geladeira
-                        </td>
-                        <td>
-                            Você?
-                        </td>
-                        <td>
-                            <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                                <img src="list/buscape.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="http://gustavoenayara.github.io/images/list/geladeira.png"></td>
-                        <td>
-                            Fogão
-                        </td>
-                        <td>
-                            Você?
-                        </td>
-                        <td>
-                            <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                                <img src="list/buscape.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="http://gustavoenayara.github.io/images/list/geladeira.png"></td>
-                        <td>
-                            Geladeira
-                        </td>
-                        <td>
-                            Você?
-                        </td>
-                        <td>
-                            <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                                <img src="list/buscape.png"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><img src="http://gustavoenayara.github.io/images/list/geladeira.png"></td>
-                        <td>
-                            Geladeira
-                        </td>
-                        <td>
-                            Você?
-                        </td>
-                        <td>
-                            <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                                <img src="list/buscape.png"></a>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td><img src=""></td>
-                        <td>
-                            Modelo
-                        </td>
-                        <td>
-                            Você?
-                        </td>
-                        <td>
-                            <a href="" target="_blank">
-                                <img src="list/buscape.png"></a>
-                        </td>
-                    </tr>
-                </table>
-
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12 footer1">
                         <div class="wow fadeInUp" data-wow-delay="0.5s">
