--- a/presentes.html
+++ b/presentes.html
@@ -65,10 +65,12 @@
                     <th width="10%">Amigo</th>
                     <th width="10%">Onde encontra</th>
                 </tr>
+
+                <!-- cozinha -->
                 <tr>
-                    <td><img src="list/geladeira.png"></td>
+                    <td><img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcTHAMwDmYCm83Y_rFszO--ptzp5rcnQ-_h0zj-I7KnlO-ufYqFn0k0&usqp=CAc"></td>
                     <td>
-                        Geladeira
+                        Refrigerador Electrolux DFN41 371 Litros Branco
                     </td>
                     <td>
                         Você?
@@ -78,21 +80,184 @@
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
-                <tr class="ganhei">
-                    <td><img src="list/geladeira.png"></td>
+                <tr class="">
+                    <td><img src="list/.png"></td>
                     <td>
-                        Fogão
+                        Forno Elétrico
                     </td>
                     <td>
                         Você?
                     </td>
                     <td>
-                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
+                        <a href="" target="_blank">
                             <img src="list/buscape.png"></a>
                     </td>
                 </tr>
                 <tr class="ganhei">
-                    <td><img src="list/geladeira.png"></td>
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Microondas
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcREAeGka31L7NzvyT77leAVFHYXRn6zaxLicySAS5J4BjXfAyL8jg&usqp=CAc"></td>
+                    <td>
+                        Electrolux PCC20 Pressão 6L
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/electrolux-pcc20-pressao-6l" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcS9cWbZwsIlyKb2HNWjEdyJhUAis2mkOJoxLDOBRuCCJPTxkNwuIQpBDY6RhIVdIWAI6pUSRASJyQ&usqp=CAc"></td>
+                    <td>
+                        Electrolux Chef ECC20 Multifuncional
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/electrolux-chef-ecc20-multifuncional" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="ganhei">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Airfryer
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTiJdWXMloPtoih3kaTG-hu-2Na4bVYgwFiWQgmrcUbJjVZZS8iNkTk-C0VP7SP&usqp=CAc"></td>
+                    <td>
+                        Batedeira Planetária Arno Deluxe Inox SX83
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/planetaria-arno-deluxe-inox-sx83" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Jogo de Panelas
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Jogo de Jantar
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+
+                <!-- serviço -->
+                <tr class="">
+                    <td><img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcSCX6SkLHMmok6w3gKdYjcFHk8QpKnnfHKVdEPIAGTD0OtX_uPbI28L7g_pDPWeA74fcrGjWDIu9GM&usqp=CAc"></td>
+                    <td>
+                        Brastemp BWT12AB Superior 12 Kg Branco
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="https://www.buscape.com.br/brastemp-bwt12ab-superior-12-kg-branco" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+
+                <!-- sala -->
+                <tr class="">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Sofá
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Mesa de jantar
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+                <tr class="">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Televisão
+                    </td>
+                    <td>
+                        Você?
+                    </td>
+                    <td>
+                        <a href="" target="_blank">
+                            <img src="list/buscape.png"></a>
+                    </td>
+                </tr>
+
+
+                <!-- quarto -->
+                <tr class="ganhei">
+                    <td><img src="list/.png"></td>
+                    <td>
+                        Guarda Roupas
+                    </td>
+                    <td>
+                        Ercimar e Adevan
+                    </td>
+                    <td>
+                        <img src="list/gift.png"></a>
+                    </td>
+                </tr>
+
+                <tr class="ganhei">
+                    <td><img src="list/.png"></td>
                     <td>
                         Cama
                     </td>
@@ -100,28 +265,15 @@
                         Gustavo e Nayara &lt;3
                     </td>
                     <td>
-                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                            <img src="list/buscape.png"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><img src="list/geladeira.png"></td>
-                    <td>
-                        Geladeira
-                    </td>
-                    <td>
-                        Você?
-                    </td>
-                    <td>
-                        <a href="https://www.buscape.com.br/refrigerador-electrolux-dfn41-371-litros-branco" target="_blank">
-                            <img src="list/buscape.png"></a>
+                        <img src="list/gift.png"></a>
                     </td>
                 </tr>
 
-                <tr>
-                    <td><img src=""></td>
+
+                <tr class="">
+                    <td><img src="list/.png"></td>
                     <td>
-                        Modelo
+                        MODELO
                     </td>
                     <td>
                         Você?
